# hackathon-support-spring-2026

./: .editorconfig  .env.example  .gitignore  DESIGN.md  README.md  conftest.py  idea.md  mise.toml  plan.md  pyproject.toml
.streamlit/: config.toml
src/: app.py  cache.py  config.py  docs_index.py  event_generator.py  research.py  sentry_client.py  storage.py  summarizer.py  theme.py  web_search.py  zendesk_client.py
src/pages/: issue.py
src/prompts/: summarize_attachment_block.txt  summarize_system.txt  summarize_user.txt
tests/: test_sentry_client.py  test_storage.py  test_summarizer.py
